Revert "portfolio page now renders correctly on mobile"
This reverts commit b5b8a59481c098c240f2ca63f0882327e0089546.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,6 @@
 }
 
 .footer-grass {
-    height: 200px;
+    height: 400px;
     background-color: darkgreen;
 }
