--- a/src/pages/PortfolioPage/PortfolioPage.css
+++ b/src/pages/PortfolioPage/PortfolioPage.css
@@ -3,6 +3,14 @@ img {
   object-fit: cover;
 }
 
+.footer-space {
+  height: 100px;
+}
+
+.footer-grass {
+  height: 100px;
+  background-color: rgb(0, 102, 0, .7);
+}
 
 @keyframes move {
   0% {
